Changed the default index.html page of Nginx

--- a/clusters/my-cluster/nginx-helm-release.yaml
+++ b/clusters/my-cluster/nginx-helm-release.yaml
@@ -13,3 +13,14 @@ spec:
         name: flux-system
         namespace: flux-system
       interval: 1m
+  values:
+    indexHtml: |-
+      <!doctype html>
+        <html>
+        <head>
+          <title>My Custom Page</title>
+        </head>
+        <body>
+          <h1>Welcome to my custom Nginx page!</h1>
+        </body
+        </html>
